--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-color: #333;
+  font-family: Helvetica;
 }
 /* ul {
   list-style-type: none;
@@ -37,22 +38,43 @@ li a {
 }
 .boxContainer {
   width: 100%;
-  background-color: red;
+  background-color: #ffffff;
   padding: 15px;
 }
 .box {
   display: inline;
   padding: 15px;
-  text-align: center  ;
+  text-align: center;
+}
+.logo:hover {
+  border-radius: 50%;
+  background-color: #e5e5e5;
+}
+.today:hover {
+  border-radius: 24px;
+  background-color: #e5e5e5;
 }
 .button {
   border-style: none;
-  background-color: #111111;
+  background-color: #000;
   border-radius: 24px;
+  text-align: center;
+  /* font-size: 50px; */
+  color: white;
 }
-
 a {
   color: white;
   text-decoration: none;
 }
-
+#search {
+  padding-left: 15px;
+  border: none;
+  background-color: #efefef;
+  width: 60%;
+  border-radius: 24px;
+  height: 35px;
+  font-size: 1rem;
+}
+#search:hover {
+  background-color: #e1e1e1;
+}
