--- a/main.css
+++ b/main.css
@@ -40,6 +40,7 @@ li a {
   width: 100%;
   background-color: #ffffff;
   padding: 15px;
+  /* right: 16px; */
 }
 .box {
   display: inline;
@@ -50,10 +51,11 @@ li a {
   border-radius: 50%;
   background-color: #e5e5e5;
 }
-.today:hover {
+.today:hover, .bell:hover, .inbox:hover, .profile:hover, .more:hover {
   border-radius: 24px;
   background-color: #e5e5e5;
 }
+
 .button {
   border-style: none;
   background-color: #000;
@@ -70,7 +72,7 @@ a {
   padding-left: 15px;
   border: none;
   background-color: #efefef;
-  width: 60%;
+  width: 67%;
   border-radius: 24px;
   height: 35px;
   font-size: 1rem;
