--- a/main.css
+++ b/main.css
@@ -1,9 +1,13 @@
 body {
   background-color: #333;
   font-family: Helvetica;
+  display: flex;
 }
+
 .container {
   width: 100%;
+  display: flex;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   top: 0;
@@ -14,7 +18,6 @@ body {
   width: 100%;
   background-color: #ffffff;
   padding: 15px;
-  /* right: 16px; */
 }
 .box {
   display: inline;
@@ -42,9 +45,13 @@ a {
   color: white;
   text-decoration: none;
 }
-input {
+input:focus {
   border: none;
   outline: none;
+}
+#search::placeholder {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
 }
 #search {
   padding-left: 15px;
@@ -59,8 +66,9 @@ input {
   background-color: #e1e1e1;
 }
 .lateralControls {
-  display: inline-flexbox;
   text-align: center;
+  width: 10%;
+  /* justify-content: flex-end; */
 }
 .fab {
   font-size: 1.5rem;
