--- a/main.css
+++ b/main.css
@@ -2,10 +2,10 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .container {
   width: 100%;
   display: flex;
@@ -13,13 +13,14 @@ body {
   padding: 0;
   top: 0;
   left: 0;
-  position: -webkit-sticky;
+  position: sticky;
 }
 .wrapper {
-  background-color: #333;
+  background-color: #ffffff;
   width: 100%;
   display: flex;
   justify-content: space-between;
+  position: sticky;
 }
 .left,
 .center,
@@ -80,7 +81,6 @@ a {
   border-radius: 50%;
   background-color: #e5e5e5;
 }
-
 .content {
   background-color: blueviolet;
   height: 100px;
@@ -88,7 +88,6 @@ a {
   top: 0;
   left: 0;
 }
-
 .element {
   height: 50px;
   width: 50px;
@@ -96,3 +95,4 @@ a {
   margin: 10px;
   display: inline-block;
 }
+
