--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 
 .container {
   width: 100%;
-  display: flex;
   margin: 0;
   padding: 0;
   top: 0;
@@ -18,7 +17,7 @@ body {
 .wrapper {
   background-color: #ffffff;
   width: 100%;
-  display: flex;
+  display:inline-flex;
   justify-content: space-between;
   position: sticky;
 }
@@ -49,6 +48,7 @@ body {
 a {
   text-decoration: none;
   color: #000;
+
 }
 .finder {
   height: 48px;
@@ -56,7 +56,7 @@ a {
   border: none;
   border-radius: 24px;
   width: 50rem;
-  background-color: #efefef;
+  background-color: #EFEFEF;
   padding-left: 15px;
   font-size: 1rem;
 }
@@ -96,3 +96,42 @@ a {
   display: inline-block;
 }
 
+.grid {
+  /* width: 100%; */
+  margin: 20px auto;
+  columns: 5;
+  /* column-gap: 40px; */
+  padding: 0 50px ;
+}
+
+.grid .card-image {
+  width: 100%;
+  margin: 0 0 20px;
+  padding: 5px;
+  overflow: hidden;
+  break-inside: avoid;
+}
+
+.grid .card-image img {
+  max-width: 100%;
+  border-radius: 24px;
+}
+.card-image:hover{
+  transform: scale(1.05);
+}
+
+.save{
+  background-color: #E60023;
+  text-decoration: none;
+  border: none;
+  padding: 12px 16px;
+  border-radius: 24px;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 14px;
+  display: inline-flex;
+}
+
+.icon {
+  display: inline;
+}
